# Imagine-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Source/: main.cpp
Source/Core/: Console.cpp  Console.h  CoreHeader.h  CoreInfo.h  FileManager.h
Source/Render/Vulkan/: Vulkan.cpp  Vulkan.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanHeader.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanVertexBuffer.cpp  VulkanVertexBuffer.h
Source/Render/Vulkan/Platform/: VulkanSurface.h  VulkanSurfaceLinux.h  VulkanSurfaceWindows.cpp  VulkanSurfaceWindows.h
